--- a/src/views/profile.html
+++ b/src/views/profile.html
@@ -33,6 +33,10 @@
             <label>Date of Birth</label>
           <input class="form-control" value="{{user['dateofBirth']}}" disabled>
         </div>
+        <br />
+        <div class="d-flex justify-content-center">
+        <a href="/profile/edit"><span type="button" class="btn btn-primary">Edit Profile</span></a>
+    </div>
       </form>
     </div>
   </div>
