--- a/src/views/sellings.html
+++ b/src/views/sellings.html
@@ -36,7 +36,7 @@
 	        <td>{{selling["bookTitle"]}}</td>
 	        <td>{{selling["employeeName"]}}</td>
 	        <td>{{selling["customerName"]}}</td>
-	        <td>Rp {{selling["charge"]}}</td>
+	        <td>Rp {{selling["bookSellPrice"]}}</td>
 	      </tr>
 	    {% endfor %}
 	  </tbody>
