--- a/src/views/addAuthor.html
+++ b/src/views/addAuthor.html
@@ -32,7 +32,7 @@
         	</select>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="emailAddress" placeholder="Email Address">
+          <input type="email" class="form-control" name="emailAddress" placeholder="Email Address">
         </div>
         <div class="form-group">
           <input type="text" class="form-control" name="nationality" placeholder="Nationality">
