--- a/src/views/home.html
+++ b/src/views/home.html
@@ -8,14 +8,16 @@
     <div class="d-flex justify-content-center">
         <h1>Home</h1>
     </div>
-    <br /><br />
-    <div class="d-flex justify-content-center">
-        <img src="/static/home.jpg" alt="home" width="400" height="250">
+    <br />
+    <div class="d-flex justify-content-center"
+        style="background-image: url('/static/home.jpg');
+        height: 50vh">
     </div>
+
     <br /><br />
     <div class="d-flex justify-content-center">
         <div class="col-md-6" style="text-align: justify; text-justify: inter-word;">
-            <p>This website's function is to manage a public library by the name of 'Central Park Library', which is done by our staffs by keeping track of available staffs, assets, customers, transactions, including registered authors and publishers for our books. Our library offers the best books imaginable, if you are unsatisfied with our services please by all means contact one of our staffs, we will deal with the nuisances immediately.</p>
+            <p>"This website's function is to manage a public library by the name of 'Central Park Library', which is done by our staffs by keeping track of available staffs, assets, customers, transactions, including registered authors and publishers for our books. Our library offers the best books imaginable, so if you are unsatisfied with our services please by all means contact one of our staffs, we will deal with the nuisances immediately. Trust me, all of those pesky little problems will be whittled away, you have our guarantee for that as a customer. Actually, the only one who could read this are our staffs, so I don't even know the point of above sentences are honestly", Mr. Suparman. </p>
         </div>
     </div>
 
