--- a/src/views/addCustomer.html
+++ b/src/views/addCustomer.html
@@ -12,7 +12,7 @@
 
 <div class="container d-flex justify-content-center" >
     <div class="col-md-4" style="border:1px solid #cecece; padding:40px 20px 40px 20px;">
-        {{ errorMessage }}
+        <div class="invalid-feedback d-flex justify-content-center">{{ errorMessage }}</div>
       <form action="#" method="get">
         <div class="form-group">
           <input type="text" class="form-control" name="FirstName" placeholder="First Name">
