--- a/src/views/authors.html
+++ b/src/views/authors.html
@@ -26,6 +26,7 @@
 	          <th>Email Address</th>
 	          <th>Nationality</th>
 	          <th>Preferred Language</th>
+	          <th>Title(s)</th>
 	      </tr>
 	  </thead>
 	  <tbody>
@@ -38,6 +39,7 @@
 	        <td>{{author["emailAddress"]}}</td>
 	        <td>{{author["nationality"]}}</td>
 	        <td>{{author["preferredLanguage"]}}</td>
+	        <td>{{author["numBooks"]}}</td>
 	      </tr>
 	    {% endfor %}
 	  </tbody>
