--- a/src/views/genres.html
+++ b/src/views/genres.html
@@ -21,6 +21,7 @@
 	      <tr>
 	          <th>Name</th>
 	          <th>Description</th>
+	          <th>Title(s)</th>
 	      </tr>
 	  </thead>
 	  <tbody>
@@ -28,6 +29,7 @@
 	      <tr>
 	        <td>{{genre["genreName"]}}</td>
 	        <td>{{genre["genreDescription"]}}</td>
+	        <td>{{genre["numBooks"]}}</td>
 	      </tr>
 	    {% endfor %}
 	  </tbody>
