--- a/src/views/publishers.html
+++ b/src/views/publishers.html
@@ -23,6 +23,7 @@
 	          <th>Headquarter</th>
 	          <th>Full Address</th>
 	          <th>Established Year</th>
+	          <th>Title(s)</th>
 	      </tr>
 	  </thead>
 	  <tbody>
@@ -32,6 +33,7 @@
 	        <td>{{publisher["publisherHeadquarter"]}}</td>
 	        <td>{{publisher["publisherFullAddress"]}}</td>
 	        <td>{{publisher["publisherEstablishedYear"]}}</td>
+	        <td>{{publisher["numBooks"]}}</td>
 	      </tr>
 	    {% endfor %}
 	  </tbody>
