--- a/src/views/addBook.html
+++ b/src/views/addBook.html
@@ -12,16 +12,16 @@
 
 <div class="container d-flex justify-content-center" >
     <div class="col-md-4" style="border:1px solid #cecece; padding:40px 20px 40px 20px;">
-        {{ errorMessage }}
-      <form action="#" method="get">
+        <div class="invalid-feedback d-flex justify-content-center">{{ errorMessage }}</div>
+      <form action="#" method="post" enctype="multipart/form-data">
         <div class="form-group">
-          <input type="text" class="form-control" name="bookid" placeholder="book id">
+          <input type="text" class="form-control" name="bookid" placeholder="book id" required="required">
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="bookTitle" placeholder="title">
+          <input type="text" class="form-control" name="bookTitle" placeholder="title" required="required">
         </div>
         <div class="form-group">
-          <input type="number" class="form-control" name="bookReleaseYear" placeholder="release year">
+          <input type="number" class="form-control" name="bookReleaseYear" placeholder="release year" required="required">
         </div>
         <div class="form-group">
         	<select name="authorId" class="form-control" required="required">
@@ -48,16 +48,20 @@
             </select>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" name="bookLanguage" placeholder="language">
+          <input type="text" class="form-control" name="bookLanguage" placeholder="language" required="required">
         </div>
         <div class="form-group">
-          <input type="number" class="form-control" name="bookPages" placeholder="pages">
+          <input type="number" class="form-control" name="bookPages" placeholder="pages" required="required">
         </div>
         <div class="form-group">
-          <input type="number" class="form-control" name="bookPrice" placeholder="buying price">
+          <input type="number" class="form-control" name="bookPrice" placeholder="buying price" required="required">
         </div>
         <div class="form-group">
-          <input type="number" class="form-control" name="bookSellPrice" placeholder="selling price">
+          <input type="number" class="form-control" name="bookSellPrice" placeholder="selling price" required="required">
+        </div>
+        <div class="form-group">
+            <label> Book Picture</label>
+            <input type="file" name="bookPicture">
         </div>
         <button type="submit" class="btn btn-primary btn-block">Submit</button>
       </form>
