--- a/src/views/layout.html
+++ b/src/views/layout.html
@@ -7,6 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap4.min.css">
+
+    <style>
+    .picture3 {
+        background-size: 75px 94px;
+        border: 0;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        height: 94px;
+        width: 75px;
+        z-index: 0;
+    }
+</style>
 </head>
 <body>
 
