--- a/src/views/profile.html
+++ b/src/views/profile.html
@@ -3,6 +3,22 @@
 {% block title %} Your Profile {% endblock %}
 
 {% block body %}
+<style>
+    .picture2 {
+        -webkit-background-size: 128px 128px;
+        background-size: 128px 128px;
+        border: 0;
+        -webkit-border-radius: 100%;
+        border-radius: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        height: 128px;
+        width: 128px;
+        z-index: 0;
+    }
+</style>
 
 <br />
     <div class="d-flex justify-content-center">
@@ -12,6 +28,7 @@
 <div class="container d-flex justify-content-center" >
     <div class="col-md-4" style="border:1px solid #cecece; padding:40px 20px 40px 20px;">
         {{ errorMessage }}
+        <img src="/static/profiles/{{session.picture if session.picture else 'default.png'}}" alt="" class="picture2">
       <form action="#" method="get">
         <div class="form-group">
             <label>Username</label>
